--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Provably-fair Plinko game with deterministic engine",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
